--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,16 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="utf-8">
-  <title>Cv</title>
+  <title>CV - César</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="shortcut icon" href="./assets/images/animals-octopus.png" />
+  <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700%7CLibre+Baskerville:400,400italic,700'
+    rel='stylesheet' type='text/css'>
 </head>
-<body>
+<body class="single-post">
   <app-root></app-root>
 </body>
 </html>
